# Scripts

./: LICENSE  README.md  detectme.c
Archive/: README.md
Archive/Python/: sitesearch.py
Bash/: decrypt.sh  encrypt.sh  osx_secureme.sh  pfx2pem.sh  relink
C/: detectme.c
Golang/: README.md  appxprune.go  appxpune.go  ghelper.go  go.mod  motivate.go  prune.go  webscan.go
Golang/AppXPruner/: README.md  main.go
Golang/AppxPrune/: appxpune.go
Golang/BackupPrune/: backup_prune.go
Golang/FilePrune/: README.md
Golang/GoRover/: main.go
Golang/GoRover/gorover/: gorover.go
Golang/GroupHelper/: README.md  main.go
Golang/Linker/: linker.go
Golang/Motivate/: README.md  motivate.go
Golang/Prune/: prune.go
Golang/WebScan/: README.md  main.go
Golang/Webscan/: webscan.go
Linux/: nuke.py
Other/: boom.py
Python/: DjangoNmapModels.py  NmapPraser.py  README.md  agents.py  blocklists.py  boom.py  certserver.py  dirdiff.py  feeds.py  hash_check.py  horse.py  host_convert.py  linesort.py  links.py  mini.py  motivate.py  move.py  move_files.py  norm.py  ntstatus.py  pycrawl.py  rename.py  samedir.py  shovel.py  sitemap.py  sitesearch.py  skycli.py  tweet2wifi.py  windown.py
Rust/ghr/: Cargo.toml  README.md  ghr.code-workspace
Rust/ghr/src/: main.rs
Shell/: README.md  decrypt.sh  encrypt.sh  pfx2pem.sh  relink  relink.sh
Windows/: WinShock.c
