[package]
name                = "ghr"
readme              = "README.md"
license             = "GPL 3.0"
version             = "0.0.1"
edition             = "2021"
authors             = ["iDigitalFlame"]
publish             = false
homepage            = "https://github.com/Scripts/Rust/Ghr/"
repository          = "https://github.com/Scripts/Rust/Ghr/"
description         = ""

[profile.dev]
panic               = "abort"

[profile.release]
lto                 = false
panic               = "abort"
debug               = false
strip               = true
opt-level           = 3
overflow-checks     = false
debug-assertions    = false

[dependencies]
libc                = { version = "0.2.141",  default-features = false }
